--- a/pages/index.html
+++ b/pages/index.html
@@ -62,7 +62,7 @@
                                     <i class="fa fa-thermometer-half fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">12</div>
+                                    <div class="huge temp-value">12</div>
                                     <div>Temperature</div>
                                 </div>
                             </div>
